--- a/de-paym/testnetguide.html
+++ b/de-paym/testnetguide.html
@@ -38,24 +38,24 @@
     body {
       margin: 0;
       min-height: 100%;
-      background: radial-gradient(circle at 10% 10%, rgba(0, 230, 255, 0.04) 0%, transparent 20%), linear-gradient(180deg, #050505 0%, #071019 60%);
+      background: radial-gradient(circle at 10% 10%, rgba(0, 230, 255, 0.04) 0%, transparent 20%),
+        linear-gradient(180deg, #050505 0%, #071019 60%);
       color: var(--muted);
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
-      display: flex;
-      align-items: flex-start;
-      justify-content: center;
-      padding: 40px 18px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
 
     .wrap {
       width: 100%;
       max-width: var(--max-width);
+      margin: 80px auto 40px;
+      /* top margin for spacing below header */
       display: flex;
       flex-direction: column;
-      align-items: center;
       gap: 18px;
     }
+
 
     .header {
       width: 100%;
