--- a/de-paym/contact.html
+++ b/de-paym/contact.html
@@ -642,7 +642,7 @@ nav a.active::after {
           </div>
           <div class="contact-details">
             <h4>Our Location</h4>
-            <p>Blockchain Innovation Hub<br>Web3 Boulevard, Crypto Oasis<br>Dubai, UAE</p>
+            <p>De-PayM<br>DePayM Protocol<br>Busia, Kenya</p>
           </div>
         </div>
       </div>
