--- a/de-paym/policies.html
+++ b/de-paym/policies.html
@@ -611,7 +611,7 @@
       
       <h3 onclick="toggleSection(this)"><i class="fas fa-headset"></i> 9. Contact Us</h3>
       <div class="toggle-content">
-        <p>Reach out at depaymsupport@gmail.com</p>
+        <p>Reach out at <a href="mailto:support@depaymprotocol.com">support@depaymprotocol.com</a></p>
       </div>
     </section>
     
